

    YARN-4571. Make app id/name available to the yarn authorizer provider for 
    better auditing. (Jian He via wangda)

    YARN-4906. Capture container start/finish time in container metrics.
    Contributed by Jian He.

    YARN-4496. Improve HA ResourceManager Failover detection on the client.
    (Jian He via xgong)

  OPTIMIZATIONS

  BUG FIXES

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    YARN-3360. Add JMX metrics to TimelineDataManager (Jason Lowe via jeagles)

    YARN-3345. Add non-exclusive node label API. (Wangda Tan via jianhe)

    YARN-3365. Enhanced NodeManager to support using the 'tc' tool via
    container-executor for outbound network traffic control. (Sidharta Seethana
    via vinodkv)

    YARN-1376. NM need to notify the log aggregation status to RM through 
    heartbeat. (Xuan Gong via junping_du)

    YARN-3348. Add a 'yarn top' tool to help understand cluster usage. (Varun
    Vasudev via jianhe)

    YARN-3347. Improve YARN log command to get AMContainer logs as well as 
    running containers logs. (Xuan Gong via junping_du)

    YARN-3443. Create a 'ResourceHandler' subsystem to ease addition of support 
    for new resource types on the NM. (Sidharta Seethana via junping_du)

    YARN-3361. CapacityScheduler side changes to support non-exclusive node
    labels. (Wangda Tan via jianhe)

    YARN-3318. Create Initial OrderingPolicy Framework and FifoOrderingPolicy.
    (Craig Welch via wangda)

    YARN-3326. Support RESTful API for getLabelsToNodes. (Naganarasimha G R
    via ozawa)

    YARN-3354. Add node label expression in ContainerTokenIdentifier to support
    RM recovery. (Wangda Tan via jianhe)

    YARN-1402. Update related Web UI and CLI with exposing client API to check
    log aggregation status. (Xuan Gong via junping_du)

    YARN-3463. Integrate OrderingPolicy Framework with CapacityScheduler.
    (Craig Welch via wangda)
