@@ -36,11 +36,13 @@ public class AppAttemptInfo {
 
   protected int id;
   protected long startTime;
+  protected long finishedTime;
   protected String containerId;
   protected String nodeHttpAddress;
   protected String nodeId;
   protected String logsLink;
   protected String blacklistedNodes;
+  protected String appAttemptId;
 
   public AppAttemptInfo() {
   }
@@ -56,6 +58,7 @@ public class AppAttemptInfo {
     if (attempt != null) {
       this.id = attempt.getAppAttemptId().getAttemptId();
       this.startTime = attempt.getStartTime();
+      this.finishedTime = attempt.getFinishTime();
       Container masterContainer = attempt.getMasterContainer();
       if (masterContainer != null) {
         this.containerId = masterContainer.getId().toString();
@@ -75,6 +78,7 @@ public class AppAttemptInfo {
           }
         }
       }
+      this.appAttemptId = attempt.getAppAttemptId().toString();
     }
   }
 
@@ -84,6 +88,10 @@ public class AppAttemptInfo {
 
   public long getStartTime() {
     return this.startTime;
+  }
+
+  public long getFinishedTime() {
+    return this.finishedTime;
   }
 
   public String getNodeHttpAddress() {
